--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,5 +1,16 @@
+.headerParent {
+    display: flex;
+    align-items: center;
+}
+
 .headerText {
     color: white;
-    font-size: 20px;
+    font-size: 13px;
     font-weight: 500;
+    margin-top: 2px;
+}
+
+.logo {
+    width: 80px;
+    margin-top: 8px;
 }
