--- a/src/Components/Product/Product.css
+++ b/src/Components/Product/Product.css
@@ -23,5 +23,28 @@
     display: flex;
     align-items: flex-start;
     flex-direction: column;
-    padding: 30px;
+    padding: 10px;
+}
+
+.buttonFlex {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    padding: 10px;
+    margin: 10px;
+}
+
+.rightSideParent {
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+}
+
+.productButton {
+    display: flex;
+    background-color: #3AD886;
+    border-radius: 4px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bold;
+
 }
